# AdaptiveCpp

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AutoRecover.ini  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  ReadMe.txt  RunMakeSample.bat  demo_c0.c  demo_c1.c  demo_c2.c  demo_c3.c  demo_c4.c  demo_c5.c  demo_c6.c  demo_c7.c  demo_c8.c  demo_c9.c  demo_h0.h  demo_h1.h  demo_h2.h  demo_h3.h  demo_h4.h  demo_h5.h  demo_h6.h  demo_h7.h  demo_h8.h  demo_h9.h  demo_main.c  ispgprs  job  makefile.mak  mkdocs.yml  yams
examples/: CMakeLists.txt
examples/bruteforce_nbody/: CMakeLists.txt  bruteforce_nbody.cpp  bruteforce_nbody.hpp  model.hpp
examples/multi_gpu/: multi_gpu_vec_add_async.cpp  multi_gpu_vec_add_multi_thread.cpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt  Paths.hpp  appdb.cpp  filesystem.cpp
src/compiler/: AdaptiveCppClangPlugin.cpp  BarrierTailReplication.cpp  CMakeLists.txt  CanonicalizeBarriers.cpp  GlobalsPruningPass.cpp  HipsyclClangPlugin.cpp  IRUtils.cpp  IsolateRegions.cpp  KernelFlattening.cpp  LoopSimplify.cpp  LoopSplitter.cpp  LoopSplitterInlining.cpp  LoopsParallelMarker.cpp  MarkLoopsParallel.cpp  OpenSYCLClangPlugin.cpp  PHIsToAllocas.cpp  ParallelRegion.cpp  PipelineBuilder.cpp  RemoveBarrierCalls.cpp  ReqdLoopBarriers.cpp  SimplifyKernel.cpp  SplitterAnnotationAnalysis.cpp  VariableUniformityAnalysis.cpp  WILoopMarker.cpp  WorkItemLoopCreation.cpp
src/compiler/cbs/: AllocaSSA.cpp  CanonicalizeBarriers.cpp  IRUtils.cpp  KernelFlattening.cpp  LoopSimplify.cpp  LoopSplitterInlining.cpp  LoopsParallelMarker.cpp  PHIsToAllocas.cpp  PipelineBuilder.cpp  Region.cpp  RemoveBarrierCalls.cpp  SimplifyKernel.cpp  (+7 more)
src/hipsycl_clang_plugin/: Attributes.hpp  CMakeLists.txt  CompilationState.hpp  Frontend.hpp  FrontendPlugin.hpp  HipsyclClangPlugin.cpp  IR.hpp
src/hipsycl_rewrite_includes/: CMakeLists.txt  HipsyclRewriteIncludes.cpp  InclusionRewriter.cpp  InclusionRewriter.hpp  RewriteSelector.hpp
src/hipsycl_transform_source/: Attributes.hpp  CMakeLists.txt  CallGraph.cpp  CallGraph.hpp  ChangedFilesWriter.cpp  ChangedFilesWriter.hpp  CompilationTargetAnnotator.cpp  CompilationTargetAnnotator.hpp  HipsyclTransform.cpp  HipsyclTransform.hpp  HipsyclTransformSource.cpp  Matcher.cpp  Matcher.hpp  main.cpp
src/libhipSYCL/: CMakeLists.txt  accessor.cpp  application.cpp  async_worker.cpp  buffer.cpp  device.cpp  device_selector.cpp  exception.cpp  handler.cpp  local_memory.cpp  queue.cpp  task_graph.cpp
src/libkernel/: CMakeLists.txt
src/libsycu/: CMakeLists.txt  accessor.cpp  async_worker.cpp  buffer.cpp  device.cpp  device_selector.cpp  exception.cpp  handler.cpp  queue.cpp  task_graph.cpp
src/runtime/: CMakeLists.txt  FindFilesystem.cmake  adaptivity_engine.cpp  application.cpp  backend.cpp  backend_loader.cpp  dag.cpp  dag_builder.cpp  dag_direct_scheduler.cpp  dag_enumerator.cpp  dag_expander.cpp  dag_interpreter.cpp  dag_manager.cpp  dag_node.cpp  dag_scheduler.cpp  dag_submitted_ops.cpp  dag_time_table.cpp  dag_unbound_scheduler.cpp  data.cpp  device_id.cpp  dylib_loader.cpp  error.cpp  hints.cpp  inorder_executor.cpp  kernel_cache.cpp  kernel_configuration.cpp  multi_queue_executor.cpp  operations.cpp  runtime.cpp  settings.cpp
src/sycl/: CMakeLists.txt  accessor.cpp  application.cpp  async_worker.cpp  buffer.cpp  device.cpp  device_selector.cpp  exception.cpp  handler.cpp  queue.cpp  task_graph.cpp
src/tests/: CMakeLists.txt
src/tools/: CMakeLists.txt
tests/: CMakeLists.txt  device_compilation_tests.cpp  math_unit_tests.cpp  unit_tests.cpp  unit_tests.hpp
tests/common/: reset.hpp
tests/compiler/: CMakeLists.txt  accumulator_for.cpp  add_modulo.cpp  babelstream_dot.cpp  cond_between_barriers.cpp  conds.cpp  conds_in_for.cpp  const_init_accumulator_for.cpp  for_in_cond.cpp  group_barrier.cpp  item_dependent_cond_in_for.cpp  item_dependent_for.cpp  lit.cfg.py  lit.site.cfg.py.in  multiple_indvars_for.cpp  no_barriers.cpp  reduce_const_for.cpp  reduce_do_while.cpp  reduce_for.cpp  reduce_for_inverse_barrier.cpp  reduce_nested_for.cpp  reduce_unrolled.cpp  reduce_while.cpp  reduce_while_early_update.cpp  reduction_reqd_wg_size.cpp  right_heavy_cond.cpp  stencil.cpp  sycl-bench_scalar_prod.cpp  sycl_dgemm.cpp  two_barrier_for.cpp
tests/compiler_launcher/: CMakeLists.txt  compiler_launcher.cc  main.cc
tests/dump_test/: CMakeLists.txt  dump_test.cpp
tests/hello_world/: CMakeLists.txt  hello_world.cpp
tests/hierarchical_dispatch/: CMakeLists.txt  hierarchical_dispatch.cpp
tests/local_memory/: CMakeLists.txt  local_memory.cpp
tests/placeholders/: CMakeLists.txt  placeholder.cpp
tests/platform_api/: CMakeLists.txt  api_test.cpp
tests/pstl/: all_of.cpp  allocation_map.cpp  any_of.cpp  copy.cpp  copy_if.cpp  copy_n.cpp  fill.cpp  fill_n.cpp  for_each.cpp  for_each_n.cpp  free_space_map.cpp  generate.cpp  generate_n.cpp  memory.cpp  merge.cpp  none_of.cpp  pointer_validation.cpp  pstl_test_suite.cpp  pstl_test_suite.hpp  reduce.cpp  replace.cpp  replace_copy.cpp  replace_copy_if.cpp  replace_if.cpp  sort.cpp  std_atomic.cpp  std_math.cpp  transform.cpp  transform_reduce.cpp
tests/rewrite-includes/: skipped.hpp  test_skipped_includes.cpp
tests/runtime/: dag_builder.cpp  data.cpp  device_manager.cpp  runtime_test_suite.cpp  runtime_test_suite.hpp
tests/sycl/: accessor.cpp  atomic.cpp  buffer.cpp  explicit_copy.cpp  extensions.cpp  fill.cpp  functional.cpp  half.cpp  id_range.cpp  info_queries.cpp  interop_handle.cpp  item.cpp  kernel_invocation.cpp  marray.cpp  math.cpp  multi_ptr.cpp  profiler.cpp  queue.cpp  reduction.cpp  reference_semantics.cpp  relational.cpp  sub_group.cpp  sycl_test_suite.cpp  sycl_test_suite.hpp  tests.cpp  usm.cpp  vec.cpp
tests/task_graph/: CMakeLists.txt  task_graph.cpp
tests/transformation/: class_template.cpp  forward_declared_template.cpp  test_basic.cpp  test_classes.cpp  test_lambda.cpp  test_nested_lambda.cpp  test_template_context.cpp
tests/vector/: CMakeLists.txt  vec.cpp
tests/vector_add/: CMakeLists.txt  vector_add.cpp
(+1028 files in other folders)
